<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <EditText
            android:id="@+id/etxt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:nextFocusDown="@+id/etxt_dob"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etxt_raiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_name"
            android:hint="@string/raiting"
            android:inputType="number"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etxt_alcohol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_raiting"
            android:ems="10"
            android:hint="@string/alcohol"
            android:inputType="number" />
        
        <LinearLayout
            android:id="@+id/layout_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_alcohol"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:id="@+id/txt_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_category" />

            <Spinner
                android:id="@+id/spinner_dept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:id="@+id/etxt_recipie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_category"
            android:ems="10"
            android:hint="@string/recipie" />

        <EditText
            android:id="@+id/etxt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_recipie"
            android:hint="@string/note"
            android:ems="10" />
        
        <EditText
            android:id="@+id/etxt_mixable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_note"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/mixable" />
        
        <EditText
            android:id="@+id/etxt_inshoppinglist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_mixable"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/inshoppinglist" />

        <LinearLayout
            android:id="@+id/layout_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_inshoppinglist"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/add" />

            <Button
                android:id="@+id/button_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>