<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" -->
<!-- android:layout_width="match_parent" -->
<!-- android:layout_height="match_parent" > -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical" 
    android:background="@color/bg_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/bg_color_title"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_bar_icon"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/iv_detail_ingredient_image"
            android:src="@drawable/ic_shoppingcart32" />

        <TextView
            android:id="@+id/inShoppingList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/bg_color_title"
            android:textColor="@color/dialog_title_text_color"
            android:gravity="center"
            android:text="@string/inShoppingList_dialog"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_everything"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dialog_title_text_color"
        android:layout_weight="1"
        android:text="@string/everything" />

    <Button
        android:id="@+id/bt_compare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dialog_title_text_color"
        android:layout_weight="1"
        android:text="@string/compare" />

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dialog_title_text_color"
        android:layout_weight="1"
        android:text="@string/cancel" />

</LinearLayout><!-- </ScrollView> -->
