<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_wallpaper" >
    <!-- android:background="@color/bg_color" -->

    <TableRow
        android:id="@+id/masterCocktailTableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/bg_color_title">

        <TextView
            android:id="@+id/bar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_weight="3"
            android:text="@string/bar_name_overview"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

        
      <ListView
            android:id="@+id/list_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>
        
      <LinearLayout 
          android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
          
          <Button
          android:id="@+id/bt_add_ressource"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/bt_insert_ressource" />
      
      <Button
          android:id="@+id/bt_delete_ressource"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/bt_delete_ressource" />
      
      </LinearLayout>


</TableLayout>
