<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/cocktail_list_picture"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/iv_detail_ingredient_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_cocktail_list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_weight="3"
            android:paddingTop="10dp"
            android:text="@string/list_cocktail_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_cocktail_list_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:textSize="15sp"
            android:text="@string/list_cocktail_category"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar1"
        style="@style/cocktailRatingBarSmartphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:isIndicator="true"
        android:numStars="5"
        android:paddingTop="8dp"
        android:stepSize="1" />

</LinearLayout>