<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_wallpaper"
    android:clickable="true">
<!--     android:background="@color/bg_color"  -->

    <LinearLayout
        android:id="@+id/fragment_detail_cocktail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_5dp"
        android:layout_marginLeft="@dimen/padding_5dp"
        android:layout_marginRight="@dimen/padding_5dp"
        android:layout_marginTop="@dimen/padding_5dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/detail_Image_Name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/cocktailPic"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:contentDescription="@string/detail_pic" />

            <LinearLayout
                android:id="@+id/detail_Checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:paddingLeft="5dp"
                    android:background="@color/bg_color_title"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                     <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/bt_addToShoppingList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bt_addToShoppingList" />

                        <Button
                            android:id="@+id/bt_changeCocktail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bt_changeNote" />

                        <Button
                            android:id="@+id/bt_changePic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bt_changePic" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <CheckBox
                            android:id="@+id/cb_detail_alcohol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cb_detail_alcohol" />

                        <CheckBox
                            android:id="@+id/cb_detail_mixable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cb_detail_mixable" />
                    </LinearLayout>

                   
                </LinearLayout>

                <RatingBar
                    android:id="@+id/ratingBar1"
                    style="@style/cocktailRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:numStars="5"
                    android:stepSize="1" />
            </LinearLayout>
        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableRow
                android:id="@+id/masteDetailTableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_color_title"
                android:clickable="false" >

                <TextView
                    android:id="@+id/detailIngredientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_5dp"
                    android:clickable="false"
                    android:layout_weight="2"
                    android:text="@string/detail_ingredient_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/detailIngredientAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_5dp"
                    android:clickable="false"
                    android:layout_weight="2"
                    android:text="@string/detail_ingredient_amount"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/detailIngredientInBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_5dp"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/detailIngredientInShoppingList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_5dp"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <ListView
                android:id="@+id/detail_Ingredient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:clickable="false" >
            </ListView>
        </TableLayout>

        <TextView
            android:id="@+id/txt_detail_recipie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color_title"
            android:text="@string/txt_detail_recipie_title"
            android:clickable="false"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txt_detail_recipie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:clickable="false"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txt_detail_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:background="@color/bg_color_title"
            android:text="@string/txt_detail_note_title"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ScrollView
            android:id="@+id/SCROLLER_ID"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:fillViewport="true"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/txt_detail_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:maxLines="5"
                android:clickable="false"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </ScrollView>

        
    </LinearLayout>

</FrameLayout>